--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-activity-feed": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-minimal-side-navigation": "^1.9.2",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "react-switch": "^7.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
