--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettier": "^3.2.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-minimal-side-navigation": "^1.9.2",
@@ -23,7 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint":  "eslint ./src",
+    "lint": "eslint ./src",
     "lint:fix": "eslint --fix ./src",
     "format": "prettier --check ./src",
     "format:fix": "prettier --write ./src"
