--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "prettier": "^3.2.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-cookie": "^7.1.0",
     "react-activity-feed": "^1.4.0",
+    "react-cookie": "^7.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-minimal-side-navigation": "^1.9.2",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
+    "vm-browserify": "^1.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
