--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.18",
     "axios": "^1.6.7",
+    "postcss": "^8.4.37",
     "prettier": "^3.2.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -23,6 +25,7 @@
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
+    "tailwindcss": "^3.4.1",
     "vm-browserify": "^1.1.2",
     "web-vitals": "^2.1.4"
   },
